<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.dooleyapps.pitchcounter.MainActivity">

    <include layout="@layout/include_toolbar" android:id="@+id/toolbar_container"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/strike_str"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                  android:gravity="center_vertical|right"
            android:hint="@string/strike_str" />

        <TextView android:id="@+id/strike_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/strike_cnt"
            android:layout_gravity="center"
            android:padding="20dip"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strike_sub"
            android:layout_gravity="center"
            android:onClick="subStrike"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strike_add"
            android:layout_gravity="center"
            android:onClick="addStrike"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/good_ball_str"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                  android:gravity="center_vertical|right"
            android:hint="@string/good_ball_str"/>

        <TextView android:id="@+id/good_ball_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/good_ball_cnt"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_ball_sub"
            android:layout_gravity="center"
            android:onClick="subGood"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_ball_add"
            android:layout_gravity="center"
            android:onClick="addGood"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/bad_ball_str"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                  android:gravity="center_vertical|right"
            android:hint="@string/bad_ball_str" />

        <TextView android:id="@+id/bad_ball_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/bad_ball_cnt"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_ball_sub"
            android:layout_gravity="center"
            android:onClick="subBad"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_ball_add"
            android:layout_gravity="end"
            android:onClick="addBad"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:padding="10dip"
        android:background="@color/light_gray">

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/total_cnt_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/total_cnt_str"
            android:layout_gravity="right"/>

        <TextView android:id="@+id/total_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/total_cnt"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/strike_percent_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/strike_percent_str"
            android:layout_gravity="right"/>

        <TextView android:id="@+id/strike_percent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/strike_percent_value"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/good_strike_percent_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/good_strike_percent_str"
            android:layout_gravity="right"/>

        <TextView android:id="@+id/good_strike_percent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/good_strike_percent_value"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView android:id="@+id/ball_percent_str"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/ball_percent_str"
                  android:layout_gravity="right"/>

        <TextView android:id="@+id/ball_percent_value"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/ball_percent_value"
                  android:layout_gravity="center" />
    </TableRow>
</TableLayout>
